Hopefully Fixed Gradle Issues